Added jar-in-jar-loader to properly load dependencies from inside the runnable jar and fixed build.gradle. Added command and chat messages.